--- a/package.json
+++ b/package.json
@@ -4,13 +4,26 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "start:dev": "nodemon"
+    "dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "@types/node": "^12.20.47",
+    "@types/swagger-ui-express": "^4.1.3",
+    "@types/uuid": "^8.3.4",
+    "ts-node-dev": "^1.1.8",
     "typescript": "^4.6.2"
+  },
+  "dependencies": {
+    "express": "^4.17.3",
+    "express-async-errors": "^3.1.1",
+    "nodemon": "^2.0.15",
+    "pg": "^8.7.3",
+    "swagger-ui-express": "^4.3.0",
+    "typeorm": "^0.2.45",
+    "uuid": "^8.3.2"
   }
 }
