--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,9 @@
 {
   "compilerOptions": {
     "target": "es2016",                                  
-    "lib": ["es6"],                                      
-    "rootDir": "src",                                                            
+    "lib": ["es6"],
+    "module": "commonjs",                                      
+    "rootDir": "src",                                                          
     "allowJs": true,                                     
     "outDir": "build",                                   
     "esModuleInterop": true,                             
