--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^12.20.47",
+    "@types/swagger-jsdoc": "^6.0.1",
     "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^8.3.4",
     "ts-node-dev": "^1.1.8",
@@ -22,6 +23,7 @@
     "express-async-errors": "^3.1.1",
     "nodemon": "^2.0.15",
     "pg": "^8.7.3",
+    "swagger-jsdoc": "^6.1.0",
     "swagger-ui-express": "^4.3.0",
     "typeorm": "^0.2.45",
     "uuid": "^8.3.2"
