--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "microservice_clean",
   "version": "1.0.0",
   "description": "",
-  "main": "index.ts",
+  "main": "./src/index.ts",
   "scripts": {
     "dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts"
   },
